--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@
     text-align: center;
 }
 .flex-row2 div{
-    border: 2px solid black;
+/*     border: 2px solid black; */
     padding: 10px;
     
     
